--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,52 @@
 * {
+  box-sizing: border-box;
+  /* padding: 0; */
   margin: 0;
+  font-size: 20px;
+}
+
+body {
+  width: 100vw;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.list {
+  margin-left: 10%;
+  width: 80%;
+  border: 2px solid black;
+  margin-bottom: 10%;
+}
+
+.list div:nth-of-type(even) {
+  background-color: #ddd;
+}
+
+.remove,
+.btn {
+  height: 25px;
+  border: 1px solid black;
+  box-shadow: 1px 2px;
+  margin: 0;
+}
+
+.black-line {
+  margin-top: 30px;
+  border-top: 2px solid black;
+  width: 50px;
+  margin-left: 46%;
+  margin-bottom: 10px;
+}
+
+.addButton {
+  width: 80%;
+  float: right;
+}
+
+.titleAuthor {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 200px;
 }
