--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,59 @@
 * {
-  box-sizing: border-box;
-  /* padding: 0; */
+  padding: 0;
   margin: 0;
-  font-size: 20px;
 }
 
-body {
-  width: 100vw;
-  text-align: center;
+.full {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
-.list {
-  margin-left: 10%;
-  width: 80%;
-  border: 2px solid black;
-  margin-bottom: 10%;
+.form {
+  margin-top: 20px;
 }
 
-.list div:nth-of-type(even) {
-  background-color: #ddd;
-}
-
-.remove,
-.btn {
-  height: 25px;
+#list {
   border: 1px solid black;
-  box-shadow: 1px 2px;
-  margin: 0;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  width: 800px;
 }
 
-.black-line {
-  margin-top: 30px;
-  border-top: 2px solid black;
-  width: 50px;
-  margin-left: 46%;
-  margin-bottom: 10px;
+.book:nth-child(odd) {
+  background-color: rgb(245, 240, 240);
 }
 
-.addButton {
-  width: 80%;
-  float: right;
+.book:nth-child(even) {
+  background-color: white;
 }
 
 .titleAuthor {
   display: flex;
-  justify-content: space-evenly;
-  gap: 200px;
+  justify-content: space-between;
+  padding: 20px;
+  padding-left: 20px;
+}
+
+.btn {
+  float: right;
+}
+
+hr {
+  width: 7rem;
+  margin-top: 18px;
+  margin-bottom: 20px;
+  height: 2px;
+  background-color: rgb(59, 57, 57);
+}
+
+h1 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+h3 {
+  padding-bottom: 10px;
 }
