--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,18 @@
   margin: 0;
 }
 
+body {
+  width: 100vw;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contact {
+  display: none;
+}
+
 .full {
   display: flex;
   flex-direction: column;
@@ -55,4 +67,28 @@ h1 {
 
 h3 {
   padding-bottom: 10px;
+}
+
+li {
+  list-style: none;
+}
+
+.header,
+.footer {
+  border: 3px solid #000;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+#date {
+  text-align: right;
+  margin-right: 5px;
+}
+
+.nav-list {
+  display: flex;
+  gap: 15px;
 }
