--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,55 @@
   margin: 0;
 }
 
-body {
-  width: 100vw;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.nav {
+  background-color: grey;
 }
 
-.contact {
-  display: none;
+.links {
+  color: white;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+
+.links {
+  display: flex;
+  margin-left: 18px;
+}
+
+.ul-links {
+  list-style: none;
+  display: flex;
+  margin-right: 6px;
+  font-weight: bold;
+}
+
+li {
+  margin-right: 12px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(59, 56, 56);
+}
+
+.ul-links li a:hover {
+  color: #2155d8;
+}
+
+.date {
+  padding: 6px 16px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .full {
@@ -22,15 +61,32 @@ body {
   align-items: center;
 }
 
-.form {
+#form {
   margin-top: 20px;
+  width: 500px;
+}
+
+#title {
+  width: 500px;
+  height: 30px;
+}
+
+#author {
+  width: 500px;
+  height: 30px;
+}
+
+.btn {
+  width: 60px;
+  height: 30px;
+  border-radius: 5px;
 }
 
 #list {
   border: 1px solid black;
   margin-bottom: 20px;
   padding-bottom: 20px;
-  width: 800px;
+  width: 50rem;
 }
 
 .book:nth-child(odd) {
@@ -49,6 +105,8 @@ body {
 }
 
 .btn {
+  background-color: grey;
+  color: white;
   float: right;
 }
 
@@ -61,34 +119,53 @@ hr {
 }
 
 h1 {
+  color: grey;
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
 h3 {
   padding-bottom: 10px;
+  color: white;
 }
 
-li {
-  list-style: none;
-}
-
-.header,
-.footer {
-  border: 3px solid #000;
-  border-radius: 8px;
+h2 {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
-#date {
-  text-align: right;
-  margin-right: 5px;
+#contact-section {
+  margin-top: 20px;
 }
 
-.nav-list {
+.contact-text {
   display: flex;
-  gap: 15px;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.contact-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.copyrights {
+  border: 1px solid grey;
+  display: flex;
+  width: 95vw;
+  justify-content: center;
+  margin-left: 30px;
+  padding-bottom: 30px;
+  padding-top: 30px;
+  margin-top: 20px;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: flex;
 }
